update: add ip to usersdata update: forum style on mobile fix: avatar not showing correctly

--- a/templates/1/css/default.css
+++ b/templates/1/css/default.css
@@ -1377,6 +1377,9 @@ ul li ul li {
         margin-bottom: .6125em;
     }
 
+    .column:not(:first-child) {
+        margin: .6125em 0 0 0;
+    }
     .column .left20 {
         margin-left: 0;
     }
